Fix spacing.

--- a/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.couchEdit.css
+++ b/nunaliit2-js/src/main/js/nunaliit2/css/basic/n2.couchEdit.css
@@ -53,8 +53,8 @@ form.attachmentEditor_creationFormWithVideo {
 }
 
 .attachmentEditor_photoPreview {
-  max-width: 200px;
-  max-height: 200px;
+  max-width: 250px;
+  max-height: 250px;
 }
 
 .attachmentEditor_cordovaCaptureButtonsContainer {
